src/assets/styles/Projects.module.css
.h1  {
    text-wrap: nowrap;
    color: skyblue;
    font-weight: 700;
    /* margin: 0; */
}

.h2, .h3 {
    text-wrap: nowrap;
    color:skyblue;
    /* margin: 0; */
}

.h1p {
    text-align: center;
    text-wrap: nowrap;
    color: rgb(30, 30, 30, 1);
    /* margin: 0; */
    font-size: 6rem;
}

.p {
    text-align: justify;
    /* margin: 0; */
}

.mainContainer {
    padding-top: 56px;
}

.ls1 {
    width: 650px;
    height: 600px;
}

.mainSecContainer {
    flex: 1;
}

.gap {
    gap: 30px;
}

.imgContainer1 {
    flex: 1;
}

.projectSwiper {
    display: flex;
    justify-content: center;
    margin: 500px;
    margin-top: 100px;
}

.swiperSlide {
    display: flex;
    text-align: center;
    justify-content: center;
    align-items: center;
}

.missionSwiper img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.projectSwiper img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
}

.imgProj {
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

.swiper1 {
    width: 700px;
    height: 500px;
    margin: 0;
    border-radius: 10px;
}

.swiper2 {
    width: 700px;
    height: 500px;
    margin: 0;
    border-radius: 10px;
}

.swiper3 {
    width: 700px;
    height: 500px;
    margin: 0;
    border-radius: 10px;
}

.swiper4 {
    width: 700px;
    height: 500px;
    margin: 0;
    border-radius: 10px;
}

.swiper5 {
    width: 700px;
    height: 500px;
    margin: 0;
    border-radius: 10px;
}

.swiper6 {
    width: 700px;
    height: 500px;
    margin: 0;
    border-radius: 10px;
}

.swiper7 {
    width: 700px;
    height: 500px;
    margin: 0;
    border-radius: 10px;
}

